# config

./: .gitlab-ci.yml  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py
nagare/: config.py  config_exceptions.py  validate.py
src/nagare/: config.py  config_exceptions.py  validate.py
tests/: test_config.py
