[metadata]
name = nagare-config
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Nagare configuration file parser'
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/config
    Tracker = https://github.com/nagareproject/config/issues

[options]
zip_safe = False
packages = find:

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
